# hospital_management_system

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml  log4rs.yaml  pgbouncer.ini  userlist.txt
entity/: Cargo.toml
entity/src/: departments.rs  doctor_schedules.rs  doctors.rs  employee_position.rs  employees.rs  lib.rs  mod.rs  nurses.rs  nurses_polyclinic_assignments.rs  patients.rs  patients_visit_intent.rs  polyclinic.rs  position_titles.rs  prelude.rs  queue_ticket.rs  referral_documents.rs  rooms.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250508_094052_create_patient_visit_intent_table.rs  m20250509_061644_create_queue_ticket_table.rs  m20250509_070014_create_patient_table.rs  m20250511_121632_alter_table_queue_ticket.rs  m20250511_123421_alter_table_patients.rs  m20250512_050855_alter_patients_table.rs  m20250521_071832_create_referral_documents_table.rs  m20250521_094041_alter_patients_visit_intent_table.rs  m20250527_112721_create_table_employees.rs  m20250527_114154_create_user_table.rs  m20250527_141001_create_table_departments.rs  m20250528_051911_create_table_polyclinic.rs  m20250528_052514_create_table_doctors.rs  m20250528_052903_create_table_room.rs  m20250528_054209_create_table_nurses.rs  m20250528_055359_create_table_position_title.rs  main.rs  (+5 more)
seeder/: Cargo.toml  seedLog.yaml
seeder/src/: helpers.rs  lib.rs  main.rs
seeder/src/seeds/: mod.rs  seeds_departments.rs  seeds_doctor_schedules.rs  seeds_doctors.rs  seeds_employees.rs  seeds_employees_position.rs  seeds_nurse_polyclinic_assignments.rs  seeds_nurses.rs  seeds_polyclinic.rs  seeds_positions_title.rs  seeds_rooms.rs  seeds_users.rs
seeder/src/tests/: context.rs  mod.rs  test_seeds_departments.rs  test_seeds_doctor_schedules.rs  test_seeds_doctors.rs  test_seeds_employees.rs  test_seeds_employees_position.rs  test_seeds_nurse_polyclinic_assignments.rs  test_seeds_nurses.rs  test_seeds_polyclinics.rs  test_seeds_position_titles.rs  test_seeds_rooms.rs  test_seeds_users.rs
src/: lib.rs  main.rs  state.rs
src/infra/: api.rs  (+1 more)
(+26 files in other folders)
