[package]
name = "hospital-management-system"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "migration", 
    "entity"
]

[dependencies]
entity = { path = "./entity" }
anyhow = "1.0.98"
axum = {version = "0.8.4", features = ["macros", "multipart"]}
axum-extra = {version = "0.10.1", features = ["cookie"]}
axum-test = "17.3.0"
http = "1.3.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
validator = { version = "0.20.0", features = ["derive"] }
aws-config = "1.6.3"
aws-sdk-s3 = {version = "1.87.0", features = ["behavior-version-latest"]}
tokio = {version = "1.45.0", features = ["full", "macros", "rt-multi-thread"]}
tower = "0.5.2"
tower-http = { version = "0.6.3", features = ["cors", "trace", "catch-panic", "limit"] }
log4rs = "1.3.0"
log = "0.4.27"
ctor = "0.4.1"
chrono = {version = "0.4.39", features = ["serde"]}
chrono-tz = "0.10.3"
futures = "0.3"
http-body-util = "0.1.3"
thiserror = "2.0.12"
tracing = "0.1.41"
uuid = {version = "1.16.0", features = ["v4"]}
sea-orm = {version = "1.1.11", features = ["runtime-tokio-native-tls", "sqlx-postgres", "macros"]}
sea-orm-cli = "1.1.11"
config = "0.15.11"
regex = "1.11.1"
strum = "0.27"
strum_macros = "0.27"
async-trait = "0.1.88"
redis = {version = "0.31.0", features = ["tls-native-tls", "tokio-native-tls-comp"]}
bb8-redis = "0.23.0"
bb8 = "0.9.0"
image = {version = "0.25.6", features = ["jpeg", "png"]}