[package]
name = "seeder"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
hospital-management-system = {path = ".."}
entity = { path = "../entity" }
migration = { path = "../migration" }
tokio = {version = "1.45.0", features = ["full"]}
sea-orm = {version = "1.1.11", features = ["runtime-tokio-native-tls", "sqlx-postgres", "macros"]}
log4rs = "1.3.0"
log = "0.4.27"
chrono = {version = "0.4.39", features = ["serde"]}
chrono-tz = "0.10.3"
rand = "0.9.1"
argon2 = "0.5.3"

once_cell = "1.21.3"
